feat: add PATCH for auth users
